# cast_simulator

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  build.rs  build_llvm.sh
cpp/python/: CMakeLists.txt  setup.py
cpp/python/cast/: __init__.py  pybind_cast.pyi  pybind_cast_cuda.pyi
cpp/tests/: CMakeLists.txt  TestKit.cpp
cpp/tests/CPU/: testCpuH.cpp
cpp/tests/Core/: testComplexSquareMatrix.cpp
cpp/tests/FPGA/: testFpgaGateCategory.cpp
cpp/tests/main/: unit_core_main.cpp  unit_cpu_main.cpp
demos/: CMakeLists.txt  cpu_bcmk.cpp  demo_asm_dump.cpp  demo_cpu_end_to_end.cpp  demo_cpu_fusion.cpp  demo_cuda_bwmat.cpp  demo_cuda_end_to_end.cpp  demo_cuda_fusion.cpp  demo_fusion.cpp  demo_kernel_performance.cpp  demo_opt.cpp  demo_ptx.cpp
demos/performance/: CMakeLists.txt  bcmk_CudaJit.cpp  bcmk_CudaKernExec.cpp  bcmk_CudaKernGen.cpp  cuda_bcmk_default.cpp  cuda_bcmk_imm.cpp  cuda_bcmk_imm_share.cpp  cuda_imm_cpu_fusion.cpp  cuda_imm_permute.cpp
demos/performance/archive/: bcmk_CudaJit.cpp  bcmk_CudaKernExec.cpp  bcmk_CudaKernGen.cpp  benchmark.cpp  correctness.cpp  cuda_bcmk_default.cpp  cuda_bcmk_imm_share.cpp  fidelity.cpp  (+4 more)
drafts/: AST.cpp  ASTContext.cpp  CMakeLists.txt  Expr.cpp  Lexer.cpp  Parser.cpp  README.md  SourceManager.cpp  draft_parser.cpp  t1.cast  t2.cast
drafts/ast/: BinaryOpExpr.cpp  CallExpr.cpp  ChannelStmt.cpp  CircuitStmt.cpp  Expr.cpp  FractionLiteral.cpp  GateApplyStmt.cpp  GateChainStmt.cpp  IfStmt.cpp  MinusOpExpr.cpp  OutStmt.cpp  PauliComponentStmt.cpp  RootNode.cpp  SimpleNumericExpr.cpp
experiments/: CMakeLists.txt  exp_simd.cpp  exp_single_gate.cpp  exp_single_gate_permute.cpp  experi_cpu_profile.cpp  experi_cuda_profile.cpp  tplt.h
performance/: CMakeLists.txt  bcmk_CudaJit.cpp  bcmk_CudaKernExec.cpp  bcmk_CudaKernGen.cpp  correctness.cpp  cuda_bcmk_default.cpp  cuda_bcmk_imm.cpp  cuda_bcmk_imm_share.cpp  simple_bcmk.cpp
performance/archive/: correctness.cpp
python/: CMakeLists.txt  binding_core.cpp  binding_cpu.cpp  binding_main.cpp  cast_python.cpp  cast_python.pyi
python/bind/: bind_core.cpp  bind_cpu.cpp  bind_cuda.cpp  bind_main.cpp
python/cast/: __init__.py  cast.pyi  cast_python_bind.pyi  pybind_cast.py  pybind_cast_cpu.pyi  pybind_cast_cuda.pyi
src/: CMakeLists.txt  circuit.rs  circuit_graph.rs  cost_model.rs  cpu.rs  cuda.rs  fusion.rs  lib.rs  mem_bw.rs  profile.rs  simulator.rs  sysinfo.rs  timing.rs
src/ADT/: CMakeLists.txt  ComplexSquareMatrix.cpp  GateMatrix.cpp  NoiseChannel.cpp  QuantumGate.cpp
src/CPU/: CPUCostModel.cpp  CPUFusionConfig.cpp  CPUKernelApply.cpp  CPUKernelGen.cpp  CPUKernelManager.cpp  CPUOptimizer.cpp  CPUOptimizerBuilder.cpp  CPUStatevector.cpp  Config.cpp  KernelApplyCPU.cpp  KernelGenCPU.cpp  KernelManagerCPU.cpp  LegacyKernelGenCPU.cpp  LegacyKernelManagerCPU.cpp
src/CUDA/: CUDAAdvCostModel.cpp  CUDACostModel.cpp  CUDAJitTls.cpp  CUDAKernelGen.cpp  CUDAKernelManager.cpp  CUDAKernelSharing.cpp  CUDALaunchPlan.cpp  CUDAOptimizer.cpp  CUDAPermute.cu  CUDAStatevector.cpp  CUDAStatevector.cu  Config.cpp  KernelGenCUDA.cpp  KernelManagerCUDA.cpp  PermuteKernels.cu  StatevectorCUDA.cpp  StatevectorCUDA.cu
src/Core/: AST.cpp  ASTContext.cpp  CMakeLists.txt  CostModel.cpp  Fusion.cpp  FusionNew.cpp  ImplOptimize.cpp  KernelGenConfigs.cpp  KernelGenInternal.cpp  KernelManagerBase.cpp  Lexer.cpp  Optimize.cpp  Optimizer.cpp  Parser.cpp  Permute.cpp  Planner.cpp  Polynomial.cpp  QuantumGate.cpp  SourceManager.cpp  StandardQuantumGate.cpp  SuperopQuantumGate.cpp  _config.cpp
src/FPGA/: FPGAConfig.cpp  FPGAFusion.cpp  FPGAInst.cpp  FPGAInstGen.cpp
src/IR/: CircuitGraphNode.cpp  CircuitNode.cpp  CompoundNode.cpp  IfMeasureNode.cpp
src/Legacy/: AST.cpp  CPUCodeGen.cpp  FPGAConfig.cpp  FPGAFusion.cpp  FPGAInst.cpp  FPGAInstGen.cpp  LegacyCircuitGraph.cpp  LegacyFusion.cpp  LegacyGateMatrix.cpp  LegacyQuantumGate.cpp  Parser.cpp  ir_generator.cpp  prepare_param.cpp
src/OpenQASM/: ast.cpp  expression.cpp  lexer.cpp  parser.cpp  token.cpp
src/Timeit/: timeit.cpp
src/Transform/: ASTCircuit2IRCircuit.cpp  AstCircuitToIrCircuit.cpp  ConvertCircuit.cpp  ConvertGate.cpp  QasmCircuitToAstCircuit.cpp
src/Utils/: CommandLine.cpp  Formats.cpp  TaskDispatcher.cpp  square_matrix.cpp  utils.cpp
src/cpp/: cpu.cpp  cpu.h  cpu_gen.cpp  cpu_gen.h  cpu_jit.cpp  cpu_jit.h  cpu_util.h  cuda.cpp  cuda.h  cuda_exec.cpp  cuda_gen.cpp  cuda_gen.h  cuda_jit.cpp  cuda_jit.h  cuda_util.h
src/cpu/: cost_model.rs  kernel.rs  mod.rs  statevector.rs  tests.rs  types.rs
src/cuda/: ffi.rs  kernel.rs  mod.rs  statevector.rs  tests.rs  types.rs
src/ffi/: cpu.rs  cuda.rs  mod.rs
src/openqasm/: circuit.rs  mod.rs  parser.rs
src/simulator/: bench.rs  measure.rs  mod.rs  tests.rs  trajectory.rs
src/types/: channel.rs  circuit.rs  gate.rs  matrix.rs  mod.rs  noise.rs  precision.rs  rational.rs
tests/: CMakeLists.txt  TestKit.cpp  circuit_execution_order.rs  cpu_cuda_compare.rs  density_matrix.rs  fusion_correctness.rs  testApplyGate.cpp  testComplexSquareMatrix.cpp  testCpuH.cpp  testCpuRzParam.cpp  testCpuU.cpp  testCudaGateVariation.cpp  testCudaRzParam.cpp  testCudaU.cpp  testCudaU2.cpp  testFpgaGateCategory.cpp  testFusionCPU.cpp  testGateMatMul.cpp  testGateMatrix.cpp  testQuantumChannel.cpp  testQuantumGate.cpp  testStatevectorCUDA.cpp  test_main.cpp
tests/CPU/: testCpuH.cpp  testCpuRzParam.cpp  testCpuU.cpp  testFusionCPU.cpp
tests/CUDA/: testCudaGateVarPermute.cpp  testCudaGateVariation.cpp  testCudaU.cpp  testCudaU2.cpp  testStatevectorCUDA.cpp
tests/Core/: testComplexSquareMatrix.cpp  testQuantumChannel.cpp  testQuantumGate.cpp
tests/assets/: qft_14.qasm
tests/circuits/: q12_1.qasm  q5.qch  q8_112_76.qch
tests/main/: unit_cuda_main.cpp  unit_fpga_main.cpp
tools/: CMakeLists.txt  blank.cpp  cost_model.cpp  cost_model_cuda.cpp  cpu_cost_model.cpp  cuda_cost_model.cpp  draft_parser.cpp  fpga_playground.cpp  fpga_vary_buffer.cpp  kernel.cpp  qasm_to_cast.cpp  qasm_to_qch.cpp  scratch.cpp  test_main.cpp
(+392 files in other folders)
