[package]
name = "cast"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
cuda = []

[dependencies]
anyhow = "1.0.102"
num-complex = "0.4.6"
num_cpus = "1"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cpu"
harness = false

[[bin]]
name = "cuda_crossover"
path = "src/bin/cuda_crossover.rs"
required-features = ["cuda"]
