[package]
name = "cast"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
cuda = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.39", features = ["derive"] }
log = "0.4.29"
num-complex = "0.4.6"
num_cpus = "1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_distr = "0.4.3"

[[bin]]
name = "profile_hw"
path = "src/bin/profile_hw.rs"

[[bin]]
name = "bench_fusion"
path = "src/bin/bench_fusion.rs"
