file(GLOB SRCS "ast/*.cpp")
add_library(new_parser STATIC AST.cpp ASTContext.cpp Lexer.cpp Parser.cpp SourceManager.cpp ${SRCS})
llvm_map_components_to_libnames(LLVM_LIBS support)
add_executable(draft_parser draft_parser.cpp)
target_link_libraries(draft_parser PRIVATE new_parser utils adt ${LLVM_LIBS})